--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,24 @@
 {
-    "name": "express-lasagna",
+    "name": "hello-world-app",
     "version": "1.0.0",
-    "description": "",
+    "description": "Innablr Hello-world api app",
     "main": "index.js",
     "scripts": {
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Rana Alwakil",
     "dependencies": {
       "aws-sdk": "^2.845.0",
       "body-parser": "^1.19.0",
-      "express": "^4.17.1"
+      "express": "^4.17.1",
+      "fund": "^1.0.0",
+      "js-yaml": "^3.13.1"
+    },
+    "devDependencies": {
+      "aws-sdk": "^2.845.0",
+      "body-parser": "^1.19.0",
+      "express": "^4.17.1",
+      "fund": "^1.0.0",
+      "js-yaml": "^3.13.1"
     }
   }
