--- a/infra/host_vars/localhost.yml
+++ b/infra/host_vars/localhost.yml
@@ -2,7 +2,7 @@ terraform:
   production:
     aws_region: "ap-southeast-2"
     environment: "production"
-    project_name: "7plus"
+    project_name: "innablr"
     vpc_cidr_block: "192.168.0.0/16"
     containter_name: "api"
     app_port: 8080
@@ -10,7 +10,7 @@ terraform:
   staging:
     aws_region: "ap-southeast-2"
     environment: "staging"
-    project_name: "7plus"
+    project_name: "innablr"
     vpc_cidr_block: "192.168.0.0/16"
     containter_name: "api"
     app_port: 8080
