--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,10 +6,14 @@ on:
       - main
   pull_request:
 
+
 jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
+    defaults:
+    run:
+      working-directory: ./infra/tf
     steps:
       - name: Checkout
         uses: actions/checkout@v3
