--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,7 +20,7 @@ jobs:
 
 
       - name: Create tar gz file
-        run: tar --exclude *.terraform* -zcvf build.tar.gz tf tf_modules
+        run: tar --create --file=build.tar.gz --exclude *.terraform* tf tf_modules
       
       - name: Terraform Cloud
         uses: addresscloud/terraform-cloud-action@v1.0.0
