using ghcr registry

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,6 +12,9 @@ env:
 
 jobs:
   build-and-push-image:
+    defaults:
+      run:
+        working-directory: ./backend
     runs-on: ubuntu-latest
     permissions:
       contents: read
