--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: "Terraform"
+name: "Pipeline"
 
 on:
   push:
@@ -12,6 +12,7 @@ env:
 
 jobs:
   build-and-push-image:
+    name: "Build and push docker image"
     defaults:
       run:
         working-directory: ./backend
@@ -47,7 +48,7 @@ jobs:
   
 
   terraform:
-    name: "Terraform"
+    name: "Terraform apply"
     runs-on: ubuntu-latest
     defaults:
       run:
