--- a/infra/tf/config.yaml
+++ b/infra/tf/config.yaml
@@ -4,4 +4,4 @@ project_name: "innablr"
 vpc_cidr_block: "192.168.0.0/16"
 containter_name: "api"
 app_port: "8080"
-image_uri: "478525466663.dkr.ecr.ap-southeast-2.amazonaws.com/app:latest"
+image_uri: "ghcr.io/rna87/fargate-api-app:main"
