--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: Substitute tfvars
+        uses: cuchi/jinja2-action@v1.2.0
+        with:
+          template: infra/templates.j2
+          output_file: infra/config.yaml
+          strict: true
+          variables: |
+            timeout=30s
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
