--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,6 +60,9 @@ jobs:
 
       - name: Show GitHub context
         run: echo "${{ github.sha }}"
+      
+      - name: Show GitHub context
+        run: cat config.yaml
 
       - name: Overwrite file
         uses: "DamianReeves/write-file-action@master"
@@ -67,7 +70,10 @@ jobs:
           path: config.yaml
           write-mode: append
           contents: |
-            console.log('last_sha: ${{ github.sha }}')
+            "last_sha: ${{ github.sha }}"
+      
+      - name: Show GitHub context
+        run: cat config.yaml
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
