--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,44 +11,45 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-image:
-    name: "Build and push docker image"
-    defaults:
-      run:
-        working-directory: ./backend
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+
+ # build-and-push-image:
+    # name: "Build and push docker image"
+    # defaults:
+    #   run:
+    #     working-directory: ./backend
+    # runs-on: ubuntu-latest
+    # permissions:
+    #   contents: read
+    #   packages: write
   
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    # steps:
+    #   - name: Checkout repository
+    #     uses: actions/checkout@v3
   
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    #   - name: Log in to the Container registry
+    #     uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+    #     with:
+    #       registry: ${{ env.REGISTRY }}
+    #       username: ${{ github.actor }}
+    #       password: ${{ secrets.GITHUB_TOKEN }}
   
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    #   - name: Extract metadata (tags, labels) for Docker
+    #     id: meta
+    #     uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+    #     with:
+    #       images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
   
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    #   - name: Build and push Docker image
+    #     uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+    #     with:
+    #       context: ./backend
+    #       push: true
+    #       tags: ${{ steps.meta.outputs.tags }}
+    #       labels: ${{ steps.meta.outputs.labels }}
   
 
   terraform:
-    needs: build-and-push-image
+    # needs: build-and-push-image
     name: "Terraform apply"
     runs-on: ubuntu-latest
     defaults:
@@ -65,7 +66,7 @@ jobs:
         run: cat config.yaml
 
       - name: Show GitHub context
-        run: echo ${{ github.sha }} />> config.yaml
+        run: echo ${{ github.sha }} >> config.yaml
       
       - name: Show GitHub context
         run: cat config.yaml
@@ -73,7 +74,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          # terraform_version: 0.13.0:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
