--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "description": "Innablr Hello-world api app",
     "main": "index.js",
     "scripts": {
+      "start": "node index.js",
+      "test": "jest"
     },
     "keywords": [],
     "author": "Rana Alwakil",
@@ -12,13 +14,15 @@
       "body-parser": "^1.19.0",
       "express": "^4.17.1",
       "fund": "^1.0.0",
-      "js-yaml": "^3.13.1"
+      "js-yaml": "^3.13.1",
+      "supertest": "^6.3.0"
     },
     "devDependencies": {
       "aws-sdk": "^2.845.0",
       "body-parser": "^1.19.0",
       "express": "^4.17.1",
       "fund": "^1.0.0",
-      "js-yaml": "^3.13.1"
+      "js-yaml": "^3.13.1",
+      "supertest": "^6.3.0"
     }
   }
