--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
       "test": "jest"
     },
     "bin": {
-      "healthcheck": "./bin/healthcheck.js"
+      "healthcheck": "node healthcheck.js"
     },
     "keywords": [],
     "author": "Rana Alwakil",
