--- a/infra/tf/config.yaml
+++ b/infra/tf/config.yaml
@@ -1,6 +1,6 @@
 aws_region: "ap-southeast-2"
 environment: "production"
-project_name: "Displayr"
+project_name: "helloworld"
 vpc_cidr_block: "192.168.0.0/16"
 containter_name: "api"
 app_port: "8080"
