--- a/infra/tf/config.yaml
+++ b/infra/tf/config.yaml
@@ -5,4 +5,4 @@ vpc_cidr_block: "192.168.0.0/16"
 containter_name: "api"
 app_port: "8080"
 image_uri: "ghcr.io/rna87/fargate-api-app:main"
-image_secret: "arn:aws:secretsmanager:ap-southeast-2:474991691929:secret:github-oauth-token-0ELSqK"
+image_secret: "arn:aws:secretsmanager:ap-southeast-2:474991691929:secret:github-roEh2C"
